syntax = "proto3";

                 package errorLog;
service ErrorLogService {
 rpc createErrorLog (ErrorLogCreateInput) returns (ErrorLog) {}
rpc errorLogs (findManyParams) returns (stream ErrorLog) {}
rpc errorLog (ErrorLogWhereUniqueInput) returns (ErrorLog) {}
rpc updateErrorLog (ErrorLogUpdateInput) returns (ErrorLog) {}
rpc deleteErrorLog (ErrorLogWhereUniqueInput) returns (ErrorLog) {} 
 }
message ErrorLogCreateInput {
string createdAt = 1;
string errorContext = 2;
string errorDetail = 3;
string errorHint = 4;
string errorMessage = 5;
string functionName = 6;
string id = 7;
};
message ErrorLog {
string createdAt = 1;
string errorContext = 2;
string errorDetail = 3;
string errorHint = 4;
string errorMessage = 5;
string functionName = 6;
string id = 7;
};
message ErrorLogWhereUniqueInput {
string createdAt = 1;
string errorContext = 2;
string errorDetail = 3;
string errorHint = 4;
string errorMessage = 5;
string functionName = 6;
string id = 7;
};
message ErrorLogUpdateInput {
string createdAt = 1;
string errorContext = 2;
string errorDetail = 3;
string errorHint = 4;
string errorMessage = 5;
string functionName = 6;
string id = 7;
};
message findManyParams {

};